fixed z-index for errors, and buttons width

--- a/styles/buttons.less
+++ b/styles/buttons.less
@@ -55,6 +55,7 @@
     font-family: "dauphine_regular";
     font-size: 10pt;
     padding-left: 6px;
+    display: table;
 
     &:first-child{
         padding-top: 3px;
