--- a/styles/wc.less
+++ b/styles/wc.less
@@ -124,9 +124,10 @@
     color: black;
     font-family: "dauphine_italic";
     font-size: 8pt;
-    margin-left: 12px;
     position: absolute;
-    bottom: 0px;
+    bottom: 0;
+    left: 12px;
+    z-index: 1;
 }
 
 //DIRTY WAY TO HIDE ERRORS AFTER 5s...
